<resources>
    <string name="app_name">Заметки</string>
    <string name="auth_welcome_text">Добро пожаловать!</string>
    <string name="auth_login_button">Войти</string>
    <string name="auth_register_button">Зарегистрироваться</string>
    <string name="auth_skip_button">Продолжить без входа</string>
    <string name="auth_forgot_button">Забыл пароль</string>
    <string name="auth_login_input">Email</string>
    <string name="auth_password_input">Пароль</string>
    <string name="auth_info_text">
        Авторизация позволяет сохранять ваши заметки
        в облаке и синхронизировать их между устройствами.
    </string>
    <string name="auth_register_header">Регистрация</string>
    <string name="auth_register_password_confirm">Подтверждение пароля</string>
    <string name="auth_forgot_password_button">Отправить</string>
    <string name="auth_forgot_password_text">
        Если есть пользователь с введённым email,
        то на неё поступит письмо со ссылкой для сброса пароля
    </string>
    <string name="auth_forgot_password_header">Сброс пароля</string>
    <string name="new_note">Новая заметка</string>
    <string name="bottom_nav_notes">Заметки</string>
    <string name="bottom_nav_settings">Настройки</string>
</resources>