<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/authWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/auth_welcome_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCenterVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authLoginInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineCenterVertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authLoginInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_login_input"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authPasswordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authLoginInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_password_input"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/authSetButtonsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/authPasswordInputLayout"
        app:layout_constraintStart_toStartOf="@+id/authPasswordInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/authPasswordInputLayout">

        <TextView
            android:id="@+id/authForgotPasswordButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textColor="@color/secondary"
            android:text="@string/auth_forgot_button" />

        <TextView
            android:id="@+id/authRegisterButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/secondary"
            android:text="@string/auth_register_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/authInfoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="16dp"
        android:text="@string/auth_info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authSetButtonsLayout" />

    <Button
        android:id="@+id/authLoginButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/auth_login_button"
        app:layout_constraintBottom_toTopOf="@+id/authSkipButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/authSkipButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/auth_skip_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenterVertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />
</androidx.constraintlayout.widget.ConstraintLayout>
